src/snapshots/ruff__linter__tests__f722.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    ForwardAnnotationSyntaxError: ///
  location:
    row: 9
    column: 13
  fix: ~

