src/snapshots/ruff__linter__tests__f822.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    UndefinedExport: b
  location:
    row: 3
    column: 1
  fix: ~

