src/snapshots/ruff__linter__tests__f823.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    UndefinedLocal: my_var
  location:
    row: 6
    column: 5
  fix: ~

