src/snapshots/ruff__linter__tests__f841.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    UnusedVariable: e
  location:
    row: 3
    column: 1
  fix: ~
- kind:
    UnusedVariable: z
  location:
    row: 16
    column: 5
  fix: ~
- kind:
    UnusedVariable: foo
  location:
    row: 20
    column: 5
  fix: ~
- kind:
    UnusedVariable: a
  location:
    row: 21
    column: 6
  fix: ~
- kind:
    UnusedVariable: b
  location:
    row: 21
    column: 9
  fix: ~

