src/snapshots/ruff__linter__tests__f841_dummy_variable_rgx.snap
---
source: src/linter.rs
assertion_line: 611
expression: checks
---
- kind:
    UnusedVariable: e
  location:
    row: 3
    column: 1
  fix: ~
- kind:
    UnusedVariable: _
  location:
    row: 14
    column: 5
  fix: ~
- kind:
    UnusedVariable: foo
  location:
    row: 21
    column: 5
  fix: ~
- kind:
    UnusedVariable: a
  location:
    row: 22
    column: 6
  fix: ~
- kind:
    UnusedVariable: b
  location:
    row: 22
    column: 9
  fix: ~

