src/snapshots/ruff__linter__tests__f841_dummy_variable_rgx_custom.snap
---
source: src/linter.rs
assertion_line: 623
expression: checks
---
- kind:
    UnusedVariable: x
  location:
    row: 2
    column: 5
  fix: ~

