src/snapshots/ruff__linter__tests__f841_dummy_variable_rgx_default.snap
---
source: src/linter.rs
assertion_line: 608
expression: checks
---
- kind:
    UnusedVariable: x
  location:
    row: 2
    column: 5
  fix: ~
- kind:
    UnusedVariable: __
  location:
    row: 4
    column: 5
  fix: ~

