src/snapshots/ruff__linter__tests__f901.snap
---
source: src/linter.rs
expression: checks
---
- kind: RaiseNotImplemented
  location:
    row: 2
    column: 11
  fix: ~
- kind: RaiseNotImplemented
  location:
    row: 6
    column: 11
  fix: ~

