src/snapshots/ruff__linter__tests__future_annotations_pep_585_py310.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    UsePEP585Annotation: List
  location:
    row: 34
    column: 17
  end_location:
    row: 34
    column: 21
  fix:
    patch:
      content: list
      location:
        row: 34
        column: 17
      end_location:
        row: 34
        column: 21
- kind:
    UsePEP585Annotation: List
  location:
    row: 35
    column: 8
  end_location:
    row: 35
    column: 12
  fix:
    patch:
      content: list
      location:
        row: 35
        column: 8
      end_location:
        row: 35
        column: 12

